Meshes/Partitioning lecture ready

--- a/beamer_slides/LaTeX_Einfuehrung.tex
+++ b/beamer_slides/LaTeX_Einfuehrung.tex
@@ -5,6 +5,7 @@
 \usepackage{upquote}
 
 
+
 \usepackage{array}
 \usepackage{ragged2e}
 
@@ -18,7 +19,7 @@
 \usetikzlibrary{shapes.arrows,calc,decorations.pathmorphing}
 \usetikzlibrary{arrows.meta,shapes.misc}
 \usetikzlibrary{fit}
-
+\usetikzlibrary{positioning,matrix, arrows.meta}
 %%\usepackage{gitinfo}
 \usepackage{shadowtext}
 
