Corrected a headline in a definition

--- a/beamer_slides/inhalt/meshes1.tex
+++ b/beamer_slides/inhalt/meshes1.tex
@@ -73,7 +73,7 @@ Edelsbrunner\cite{Edelsbrunner:2006:GTM:1137760}.
 \begin{frame}
   \frametitle{Structure of a Cell Complex}
 In order to construct a mesh we combine and connect cells of equal dimension: vertices are connected to vertices and edges are connected to \keyword{adjacent} edges. 
- 	\begin{block}{Dimension of a Cell Complex}
+ 	\begin{block}{Vertex Space of a Cell Complex}
 By $|\mathcal M|$ we refer to the set of points of mesh $\mathcal M$:	
 \begin{align*}
   |\mathcal M|=\{\vec{x} : \vec{x} \in \sigma \in \mathcal M, \text{$\sigma$ is a cell in $\mathcal M$.}\}  
